# data_agent_lite

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pack.bat  pack.ps1  railway.json  start-data-agent.bat  start-data-agent.ps1  vercel.json
api/: [...path].js
backend/: pyproject.toml
backend/src/: agent.py  api_models.py  app_lifecycle.py  chat_service.py  data_manager.py  errors.py  intent_planner.py  ml_helpers.py  preprocessing.py  request_parsing.py  result_types.py  routing_rules.py  schema_profile.py  server.py  settings.py  sse.py  tools.py
backend/temp_data/: mock数据集.csv
backend/tests/: conftest.py  test_api_behavior.py  test_data_semantics.py  test_golden_workflows.py  test_live_canary.py  test_ml_helpers.py  test_ml_natural_language_golden.py  test_packaging_hygiene.py  test_refactor_stability.py  test_routing_rules.py  test_safe_execution.py  test_schema_preprocessing.py  test_server_imports.py  test_settings_usage.py  test_stats_helpers.py  test_stream_validation.py  test_upload_lifecycle.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/sample_data/: sales_data.csv  student_scores.csv  user_behavior.csv
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatInterface.tsx  DataUpload.tsx  Header.tsx  VisualizationPanel.tsx
frontend/src/components/chat/: DatasetViews.tsx  types.ts  (+5 more)
frontend/src/config/: api.test.ts  api.ts  layout.ts  sampleDatasets.ts
frontend/src/styles/: globals.css
frontend/src/types/: data.ts
scripts/: generate_sample_data.py
(+5 files in other folders)
